# video-editor

./: Dockerfile  README.md  ai_video_editor_simple.py  api.py  error_log_Entrepreneurship Copilot - Google Chrome 2025-07-02 16-44-27.txt  error_log_Excel AI Analyst - Google Chrome 2025-06-25 07-05-17.txt  pyproject.toml  requirements.txt  streamlit_video_editor.py  test_paths.py  videos.txt
streamlit_logs/: error_log_Excel AI Analyst - Google Chrome 2025-06-25 07-05-17.txt  error_log_Excel AI Analyst - Google Chrome 2025-06-25 07-10-53.txt  execution_log_Excel AI Analyst - Google Chrome 2025-06-25 07-05-17.txt
